@@ -19,6 +19,7 @@ documents those changes that are of interest to users and administrators.
     from a node.
  -- Better debugging when a job doesn't have a job_resrcs ptr.
  -- Store ave watts in energy plugins.
+ -- Add XCC plugin for reading Lenovo Power.
 
 * Changes in Slurm 18.08.4
 ==========================
